--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+behave==1.2.6
 click==8.0.3
 environs==9.3.4
 Flask==2.0.2
@@ -5,6 +6,9 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 marshmallow==3.14.0
+parse==1.19.0
+parse-type==0.5.2
 psycopg2-binary==2.9.2
 python-dotenv==0.19.2
+six==1.16.0
 Werkzeug==2.0.2
